Fix for a collapsing inner div in Chrome and Firefox

--- a/src/app/partials/_grid-related.scss
+++ b/src/app/partials/_grid-related.scss
@@ -2,6 +2,7 @@
     @include clearfix();
     margin: 0 $sizer;
     max-width: $max-width;
+    width: 100%;
 
     @include respond-to("tablet") {
         margin: 0 $sizer 0 0;
